2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/actions/file-actions.c
	* app/actions/file-commands.[ch]
	* menus/image-menu.xml.in: renamed file-open-as-layer to
	file-open-as-layers to complete the changes done to fix bug #358082.

2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: applied patch from gg that
	removes duplicated code (bug #358481).

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: merged all tool options notify
	callbacks into a single one and added utility function
	gimp_rectangle_tool_synthesize_motion() to improve
	maintainability.

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion): need
	to subtract the snap_x and snap_y values from the coords before
	calling ourselves recursively, otherwise we run into an infinite
	recursion.

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: removed
	gimp_rectangle_tool_get_function() and set_function().

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: pause the draw tool earlier in
	motion() so we don't get artifacts when the function changes.
	Fixed inside_x and inside_y usage in oper_update(). Get rid of
	some local variables in draw().

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: fixed snapping. Replaced lots of
	g_object_get() by simply accessing private->member. Misc small
	cleanups.

2006-11-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_do): moved call to
	gimp_item_get_image() out of the loop.

	* app/base/pixel-region.c
	* app/core/gimpitem.c: formatting.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: update the configuration dialog when
	then color configuration is changed.

	* plug-ins/common/lcms.c: be even more robust.

2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcoloreditor.c